@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-26T16:01:47Z",
+  "timestamp" : "2022-08-30T00:37:48Z",
   "count_outdated" : 49,
   "uniques_outdated" : 42,
-  "count" : 53,
-  "uniques" : 44,
+  "count" : 62,
+  "uniques" : 51,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -18,6 +18,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 9, 9 ],
+      "uniques": 7,
+      "uniques_minmax": [ 7, 7 ]
     }
   ]
 }
