@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 2,
+  "count": 13,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2022-08-22T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
+      "count": 9,
+      "uniques": 7
     }
   ]
 }
