@@ -1,3 +1,11 @@
+2022-08-30T00:37:48Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2952737907
+* notice: last 14d: unq all: 8 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 44 53
+* notice: next accum: outdated-unq outdated-all / unq all: 42 49 / 51 62
+* notice: prev exec diff / last date diff / accum: unq all: +7 +9 -0 -0 / +7 +9 -0 -0 / 7 9
+* notice: removed / changed dates: [] / [2022-08-29]
+
 2022-08-26T16:01:47Z:
 * notice: last 14d: unq all: 2 4
 * notice: prev accum: outdated-unq outdated-all / unq all: 37 43 / 40 48
